@@ -16,6 +16,8 @@ Current git version
   * New command line option '--replace' for replacing an existing window manager.
   * The frame attributes ('selection', 'algorithm', 'fraction', 'split_type')
     are now writable.
+  * New objects for panels (under 'panels', exposing attributes 'instance',
+    'class', 'geometry', 'winid')
   * The setting 'monitors_locked' is now explicitly an unsigned integer.
   * The setting 'default_frame_layout' now holds an algorithm name.
   * The 'shift' command now moves the window to a neighboured monitor if
